resources/cr/advance/advance.template.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: $APK_API_PROD_ROUTE
spec:
  hostnames:
    - prod.gw.wso2.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: Default
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /$APK_API_CONTEXT/$APK_API_VERSION/secure/get/
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: custom-request-header
                value: myvalue
            set:
              - name: custom-override-header
                value: myvalue
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: custom-response-header
                value: myvalue
            remove:
              - access-control-allow-credentials
        - type: ExtensionRef
          extensionRef:
            group: dp.wso2.com
            kind: Authentication
            name: prod-http-bin-authentication
        - type: ExtensionRef
          extensionRef:
            group: dp.wso2.com
            kind: Scope
            name: pet
      backendRefs:
        - group: ""
          kind: Service
          name: secure-backend
          port: 443
          weight: 1
    - matches:
        - path:
            type: PathPrefix
            value: /$APK_API_CONTEXT/$APK_API_VERSION/secure/put/
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: custom-request-header
                value: myvalue
            set:
              - name: custom-override-header
                value: myvalue
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: custom-response-header
                value: myvalue
            remove:
              - access-control-allow-credentials
        - type: ExtensionRef
          extensionRef:
            group: dp.wso2.com
            kind: Authentication
            name: prod-http-bin-authentication
        - type: ExtensionRef
          extensionRef:
            group: dp.wso2.com
            kind: Scope
            name: pet
      backendRefs:
        - group: ""
          kind: Service
          name: secure-backend
          port: 443
          weight: 1
    - matches:
        - path:
            type: PathPrefix
            value: /$APK_API_CONTEXT/$APK_API_VERSION/secure/post/
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: custom-request-header
                value: myvalue
            set:
              - name: custom-override-header
                value: myvalue
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: custom-response-header
                value: myvalue
            remove:
              - access-control-allow-credentials
        - type: ExtensionRef
          extensionRef:
            group: dp.wso2.com
            kind: Authentication
            name: prod-http-bin-authentication
        - type: ExtensionRef
          extensionRef:
            group: dp.wso2.com
            kind: Scope
            name: pet
      backendRefs:
        - group: ""
          kind: Service
          name: secure-backend
          port: 443
          weight: 1
    - matches:
        - path:
            type: PathPrefix
            value: /$APK_API_CONTEXT/$APK_API_VERSION/secure/patch/
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: custom-request-header
                value: myvalue
            set:
              - name: custom-override-header
                value: myvalue
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: custom-response-header
                value: myvalue
            remove:
              - access-control-allow-credentials
        - type: ExtensionRef
          extensionRef:
            group: dp.wso2.com
            kind: Authentication
            name: prod-http-bin-authentication
        - type: ExtensionRef
          extensionRef:
            group: dp.wso2.com
            kind: Scope
            name: pet
      backendRefs:
        - group: ""
          kind: Service
          name: secure-backend
          port: 443
          weight: 1
    - matches:
        - path:
            type: PathPrefix
            value: /$APK_API_CONTEXT/$APK_API_VERSION/secure/delete/
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: custom-request-header
                value: myvalue
            set:
              - name: custom-override-header
                value: myvalue
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: custom-response-header
                value: myvalue
            remove:
              - access-control-allow-credentials
        - type: ExtensionRef
          extensionRef:
            group: dp.wso2.com
            kind: Authentication
            name: prod-http-bin-authentication
        - type: ExtensionRef
          extensionRef:
            group: dp.wso2.com
            kind: Scope
            name: pet
      backendRefs:
        - group: ""
          kind: Service
          name: secure-backend
          port: 443
          weight: 1
    - matches:
        - path:
            type: PathPrefix
            value: /$APK_API_CONTEXT/$APK_API_VERSION/get/
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: custom-request-header
                value: myvalue
            set:
              - name: custom-override-header
                value: myvalue
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: custom-response-header
                value: myvalue
            remove:
              - access-control-allow-credentials
        - type: ExtensionRef
          extensionRef:
            group: dp.wso2.com
            kind: Authentication
            name: prod-http-bin-authentication
        - type: ExtensionRef
          extensionRef:
            group: dp.wso2.com
            kind: Scope
            name: pet
      backendRefs:
        - group: ""
          kind: Service
          name: backend
          port: 80
          weight: 1
    - matches:
        - path:
            type: PathPrefix
            value: /$APK_API_CONTEXT/$APK_API_VERSION/put/
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: custom-request-header
                value: myvalue
            set:
              - name: custom-override-header
                value: myvalue
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: custom-response-header
                value: myvalue
            remove:
              - access-control-allow-credentials
        - type: ExtensionRef
          extensionRef:
            group: dp.wso2.com
            kind: Authentication
            name: prod-http-bin-authentication
        - type: ExtensionRef
          extensionRef:
            group: dp.wso2.com
            kind: Scope
            name: pet
      backendRefs:
        - group: ""
          kind: Service
          name: backend
          port: 80
          weight: 1
    - matches:
        - path:
            type: PathPrefix
            value: /$APK_API_CONTEXT/$APK_API_VERSION/post/
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: custom-request-header
                value: myvalue
            set:
              - name: custom-override-header
                value: myvalue
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: custom-response-header
                value: myvalue
            remove:
              - access-control-allow-credentials
        - type: ExtensionRef
          extensionRef:
            group: dp.wso2.com
            kind: Authentication
            name: prod-http-bin-authentication
        - type: ExtensionRef
          extensionRef:
            group: dp.wso2.com
            kind: Scope
            name: pet
      backendRefs:
        - group: ""
          kind: Service
          name: backend
          port: 80
          weight: 1
    - matches:
        - path:
            type: PathPrefix
            value: /$APK_API_CONTEXT/$APK_API_VERSION/patch/
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: custom-request-header
                value: myvalue
            set:
              - name: custom-override-header
                value: myvalue
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: custom-response-header
                value: myvalue
            remove:
              - access-control-allow-credentials
        - type: ExtensionRef
          extensionRef:
            group: dp.wso2.com
            kind: Authentication
            name: prod-http-bin-authentication
        - type: ExtensionRef
          extensionRef:
            group: dp.wso2.com
            kind: Scope
            name: pet
      backendRefs:
        - group: ""
          kind: Service
          name: backend
          port: 80
          weight: 1
    - matches:
        - path:
            type: PathPrefix
            value: /$APK_API_CONTEXT/$APK_API_VERSION/delete/
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: custom-request-header
                value: myvalue
            set:
              - name: custom-override-header
                value: myvalue
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: custom-response-header
                value: myvalue
            remove:
              - access-control-allow-credentials
        - type: ExtensionRef
          extensionRef:
            group: dp.wso2.com
            kind: Authentication
            name: prod-http-bin-authentication
        - type: ExtensionRef
          extensionRef:
            group: dp.wso2.com
            kind: Scope
            name: pet
      backendRefs:
        - group: ""
          kind: Service
          name: backend
          port: 80
          weight: 1
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: sand-http-route-http-bin-api-advance
spec:
  hostnames:
    - sand.gw.wso2.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: Default
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /$APK_API_CONTEXT/$APK_API_VERSION/secure/get/
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: custom-request-header
                value: myvalue
            set:
              - name: custom-override-header
                value: myvalue
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: custom-response-header
                value: myvalue
            remove:
              - access-control-allow-credentials
        - type: ExtensionRef
          extensionRef:
            group: dp.wso2.com
            kind: Authentication
            name: sand-http-bin-authentication
        - type: ExtensionRef
          extensionRef:
            group: dp.wso2.com
            kind: Scope
            name: pet
      backendRefs:
        - group: ""
          kind: Service
          name: secure-backend
          port: 443
          weight: 1
    - matches:
        - path:
            type: PathPrefix
            value: /$APK_API_CONTEXT/$APK_API_VERSION/secure/put/
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: custom-request-header
                value: myvalue
            set:
              - name: custom-override-header
                value: myvalue
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: custom-response-header
                value: myvalue
            remove:
              - access-control-allow-credentials
        - type: ExtensionRef
          extensionRef:
            group: dp.wso2.com
            kind: Authentication
            name: sand-http-bin-authentication
        - type: ExtensionRef
          extensionRef:
            group: dp.wso2.com
            kind: Scope
            name: pet
      backendRefs:
        - group: ""
          kind: Service
          name: secure-backend
          port: 443
          weight: 1
    - matches:
        - path:
            type: PathPrefix
            value: /$APK_API_CONTEXT/$APK_API_VERSION/secure/post/
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: custom-request-header
                value: myvalue
            set:
              - name: custom-override-header
                value: myvalue
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: custom-response-header
                value: myvalue
            remove:
              - access-control-allow-credentials
        - type: ExtensionRef
          extensionRef:
            group: dp.wso2.com
            kind: Authentication
            name: sand-http-bin-authentication
        - type: ExtensionRef
          extensionRef:
            group: dp.wso2.com
            kind: Scope
            name: pet
      backendRefs:
        - group: ""
          kind: Service
          name: secure-backend
          port: 443
          weight: 1
    - matches:
        - path:
            type: PathPrefix
            value: /$APK_API_CONTEXT/$APK_API_VERSION/secure/patch/
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: custom-request-header
                value: myvalue
            set:
              - name: custom-override-header
                value: myvalue
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: custom-response-header
                value: myvalue
            remove:
              - access-control-allow-credentials
        - type: ExtensionRef
          extensionRef:
            group: dp.wso2.com
            kind: Authentication
            name: sand-http-bin-authentication
        - type: ExtensionRef
          extensionRef:
            group: dp.wso2.com
            kind: Scope
            name: pet
      backendRefs:
        - group: ""
          kind: Service
          name: secure-backend
          port: 443
          weight: 1
    - matches:
        - path:
            type: PathPrefix
            value: /$APK_API_CONTEXT/$APK_API_VERSION/secure/delete/
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: custom-request-header
                value: myvalue
            set:
              - name: custom-override-header
                value: myvalue
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: custom-response-header
                value: myvalue
            remove:
              - access-control-allow-credentials
        - type: ExtensionRef
          extensionRef:
            group: dp.wso2.com
            kind: Authentication
            name: sand-http-bin-authentication
        - type: ExtensionRef
          extensionRef:
            group: dp.wso2.com
            kind: Scope
            name: pet
      backendRefs:
        - group: ""
          kind: Service
          name: secure-backend
          port: 443
          weight: 1
    - matches:
        - path:
            type: PathPrefix
            value: /$APK_API_CONTEXT/$APK_API_VERSION/get/
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: custom-request-header
                value: myvalue
            set:
              - name: custom-override-header
                value: myvalue
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: custom-response-header
                value: myvalue
            remove:
              - access-control-allow-credentials
        - type: ExtensionRef
          extensionRef:
            group: dp.wso2.com
            kind: Authentication
            name: sand-http-bin-authentication
        - type: ExtensionRef
          extensionRef:
            group: dp.wso2.com
            kind: Scope
            name: pet
      backendRefs:
        - group: ""
          kind: Service
          name: backend
          port: 80
          weight: 1
    - matches:
        - path:
            type: PathPrefix
            value: /$APK_API_CONTEXT/$APK_API_VERSION/put/
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: custom-request-header
                value: myvalue
            set:
              - name: custom-override-header
                value: myvalue
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: custom-response-header
                value: myvalue
            remove:
              - access-control-allow-credentials
        - type: ExtensionRef
          extensionRef:
            group: dp.wso2.com
            kind: Authentication
            name: sand-http-bin-authentication
        - type: ExtensionRef
          extensionRef:
            group: dp.wso2.com
            kind: Scope
            name: pet
      backendRefs:
        - group: ""
          kind: Service
          name: backend
          port: 80
          weight: 1
    - matches:
        - path:
            type: PathPrefix
            value: /$APK_API_CONTEXT/$APK_API_VERSION/post/
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: custom-request-header
                value: myvalue
            set:
              - name: custom-override-header
                value: myvalue
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: custom-response-header
                value: myvalue
            remove:
              - access-control-allow-credentials
        - type: ExtensionRef
          extensionRef:
            group: dp.wso2.com
            kind: Authentication
            name: sand-http-bin-authentication
        - type: ExtensionRef
          extensionRef:
            group: dp.wso2.com
            kind: Scope
            name: pet
      backendRefs:
        - group: ""
          kind: Service
          name: backend
          port: 80
          weight: 1
    - matches:
        - path:
            type: PathPrefix
            value: /$APK_API_CONTEXT/$APK_API_VERSION/patch/
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: custom-request-header
                value: myvalue
            set:
              - name: custom-override-header
                value: myvalue
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: custom-response-header
                value: myvalue
            remove:
              - access-control-allow-credentials
        - type: ExtensionRef
          extensionRef:
            group: dp.wso2.com
            kind: Authentication
            name: sand-http-bin-authentication
        - type: ExtensionRef
          extensionRef:
            group: dp.wso2.com
            kind: Scope
            name: pet
      backendRefs:
        - group: ""
          kind: Service
          name: backend
          port: 80
          weight: 1
    - matches:
        - path:
            type: PathPrefix
            value: /$APK_API_CONTEXT/$APK_API_VERSION/delete/
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: custom-request-header
                value: myvalue
            set:
              - name: custom-override-header
                value: myvalue
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: custom-response-header
                value: myvalue
            remove:
              - access-control-allow-credentials
        - type: ExtensionRef
          extensionRef:
            group: dp.wso2.com
            kind: Authentication
            name: sand-http-bin-authentication
        - type: ExtensionRef
          extensionRef:
            group: dp.wso2.com
            kind: Scope
            name: pet
      backendRefs:
        - group: ""
          kind: Service
          name: secure-backend
          port: 80
          weight: 1
